--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {% block head %}{% endblock %}
+  {% block head %}
+    <meta http-equiv="refresh" content="5;" />
+  {% endblock %}
 
   <title>BAPSicle {% if data.ui_title %} | {{data.ui_title}}{% endif %}</title>
 
