--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block content %}
-<div class="container-fluid text-center p-5">
-    <div class="error mx-auto" data-text="404">404</div>
-    <p class="lead text-gray-800 mb-5">Page Not Found</p>
-    <p class="text-gray-900 mb-0">Looks like you fell off the tip of the iceberg.</p>
-    <a href="/">← Escape Back Home</a>
-  </div>
+{% block content_inner %}
+<div class="text-center">
+  <div class="error mx-auto" data-text="404">404</div>
+  <p class="lead text-gray-800 mb-5">Page Not Found</p>
+  <p class="text-gray-900 mb-0">Looks like you fell off the tip of the iceberg.</p>
+  <a href="/">← Escape Back Home</a>
+</div>
 {% endblock %}
