Add pause support, as well as "true" position

--- a/templates/status.html
+++ b/templates/status.html
@@ -7,6 +7,11 @@
     <code>
       {% for player in data.channels %}
       <a href="/player/{{player.channel}}/play">Play</a> 
+      {% if player.paused %}
+      <a href="/player/{{player.channel}}/unpause">UnPause</a>
+      {% else %}
+      <a href="/player/{{player.channel}}/pause">Pause</a>
+      {% endif %}
       <a href="/player/{{player.channel}}/stop">Stop</a>
       <a href="/player/{{player.channel}}/seek/50">Seek 50</a>
       {{player}}<br>
