--- a/templates/config.html
+++ b/templates/config.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content_inner %}
 <code>
+  <a href="/player/0/output/none">Set Channel 0</a> <a href="/player/1/output/none">Set Channel 1</a> <a href="/player/2/output/none">Set Channel 2</a> - System Default Output<br>
   {% for output in data.outputs %}
     <a href="/player/0/output/{{output.name}}">Set Channel 0</a> <a href="/player/1/output/{{output.name}}">Set Channel 1</a> <a href="/player/2/output/{{output.name}}">Set Channel 2</a> - {{output.name}}<br>
   {% endfor %}
