server details on web interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             Open WebStudio
           </a>
           <hr>
-          <p>Version: X  |  Server Name: Studio X</p>
+          <p>Version: {{data.server_version}}  |  Server Name: {{data.server_name}}</p>
         </div>
       </div>
     </div>
