--- a/templates/status.html
+++ b/templates/status.html
@@ -30,7 +30,7 @@
         {% for planitem in player.show_plan %}
 
           <small>
-            <a href="/player/{{player.channel}}/load/{{planitem.channelWeight}}">Load</a> {{ planitem }}
+            <a href="/player/{{player.channel}}/load/{{planitem.weight}}">Load</a> {{ planitem }}
           </small>
           <hr />
 
