Various reliabilty / debugging improvements

--- a/templates/server.html
+++ b/templates/server.html
@@ -8,16 +8,27 @@
       <label for="port">Server Port:</label>
       <input type="number" id="port" name="port" class="form-control" value="{{data.state.port}}">
       <br>
+      <label for="port">WebSockets Port:</label>
+      <input type="number" id="ws_port" name="ws_port" class="form-control" value="{{data.state.ws_port}}">
+      <br>
       <label for="name">Server Name:</label>
       <input type="text" id="name" name="name" class="form-control" value="{{data.state.server_name}}">
       <br>
       <label for="channels">Number of Channels:</label>
       <input type="number" id="channels" name="channels" class="form-control" value="{{data.state.num_channels}}">
-      <br>  
-      <label for="port">WebSockets Port:</label>
-      <input type="number" id="ws_port" name="ws_port" class="form-control" value="{{data.state.ws_port}}">
-      <br>  
-      <input type="submit" class="btn btn-primary" value="Restart Server">
+      <br>
+      <label for="ser_port">BAPS Controller Serial Port:</label>
+      <select class="form-control" name="ser_port">
+        <label>Serial Ports</label>
+        {% for port in data.ser_ports %}
+          <option value="{{port.name}}">{{port.name}}</option>
+        {% endfor %}
+
+        <option value="none">{% if not data.ser_ports %}No ports found.{% else %}None{% endif %}</option>
+
+      </select>
+      <br>
+      <input type="submit" class="btn btn-primary" value="Save & Restart Server">
     </form>
   {% endif %}
 {% endblock %}
