--- a/templates/config.html
+++ b/templates/config.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 {% block content_inner %}
+<h3 class="h5">Audio Outputs</h3>
 <code>
-  <a href="/player/0/output/none">Set Channel 0</a> <a href="/player/1/output/none">Set Channel 1</a> <a href="/player/2/output/none">Set Channel 2</a> - System Default Output<br>
+
   {% for output in data.outputs %}
-    <a href="/player/0/output/{{output.name}}">Set Channel 0</a> <a href="/player/1/output/{{output.name}}">Set Channel 1</a> <a href="/player/2/output/{{output.name}}">Set Channel 2</a> - {{output.name}}<br>
+
+  Set for:
+  {% for channel in data.channels %}
+    <a href="/player/{{channel.channel}}/output/none">Channel {{channel.channel}}</a>
+  {% endfor %}
+    - {% if output.name %}{{output.name}}{% else %}System Default Output{% endif %}<br>
   {% endfor %}
 </code>
 {% endblock %}
