Add build version when packaging.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
             Open WebStudio
           </a>
           <hr>
-          <p>Version: {{data.server_version}}  |  Server Name: {{data.server_name}}</p>
+          <p>Version: {{data.server_version}} - Build: {{data.server_build}}</p>
+          <p>Server Name: {{data.server_name}}</p>
         </div>
       </div>
     </div>
