Add presenter to bapsicle.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
           </div>
           <hr>
           <p>Wanted the actual playout controller?</p>
-          <a href="#" class="btn btn-primary btn-user btn-block">
-            Open WebStudio
+          <a href="/presenter/" class="btn btn-primary btn-user btn-block">
+            Open BAPS Presenter
           </a>
           <hr>
           <p>Version: {{data.server_version}} - Build: {{data.server_build}}</p>
