--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,10 @@
 <body class="bg-gradient-primary">
 
     <div class="container">
-  
+
       <!-- Outer Row -->
       <div class="row justify-content-center">
-  
+
         <div class="col-xl-10 col-lg-12 col-md-9">
           <div class="mt-5">
             <a href="/">
@@ -38,10 +38,10 @@
               <a href="/status" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'status' %}active{% endif %}">
                 Status
               </a>
-              <a href="/config" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'config' %}active{% endif %}">
-                Channel Config
+              <a href="/config/player" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'config' %}active{% endif %}">
+                Player Config
               </a>
-              <a href="/server" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'server' %}active{% endif %}">
+              <a href="/config/server" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'server' %}active{% endif %}">
                 Server Config
               </a>
               <a href="/logs" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'logs' %}active{% endif %}">
@@ -50,7 +50,7 @@
             </div>
             <div class="card o-hidden border-0 shadow-lg my-3">
               {% block content %}
-                
+
                 <div class="card-body p-0">
                   <!-- Nested Row within Card Body -->
                   <div class="row">
@@ -72,15 +72,15 @@
                     </div>
                   </div>
                 </div>
-    
+
               {% endblock %}
             </div>
           </div>
-  
+
         </div>
-  
+
       </div>
-  
+
     </div>
 </body>
 
