--- a/ui-static/css/sb-admin-2.css
+++ b/ui-static/css/sb-admin-2.css
@@ -10803,7 +10803,7 @@ a:focus {
 }
 
 .bg-login-image, .bg-index-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("/static/img/splash.png");
   background-position: center;
   background-size: cover;
 }
